--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </ul>
         <div class="row">
           <div class="col-6">
-            <span class="main-emoji">⛅</span>
+            <img src="" alt="clear" id="icon" class="main-emoji" />
             <span id="temperature"></span>
             <span class="link">
               <a href="#" id="c-link">℃</a> |
