Made main icon active

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </ul>
         <div class="row">
           <div class="col-6">
-            <img src="" alt="clear" id="icon" class="main-emoji" />
+            <img src="" alt="clear" id="icon" class="main-icon" />
             <span id="temperature"></span>
             <span class="link">
               <a href="#" id="c-link">℃</a> |
@@ -64,7 +64,7 @@
                 <div class="card-friday">
                   Friday
                   <br />
-                  <span class="emoji">🌦</span>
+                  <span class="day-icon">🌦</span>
                   <br />
                   +3°
                 </div>
@@ -75,7 +75,7 @@
                 <div class="card-day">
                   Saturday
                   <br />
-                  <span class="emoji">🌦</span>
+                  <span class="day-icon">🌦</span>
                   <br />
                   +6°
                 </div>
@@ -86,7 +86,7 @@
                 <div class="card-day">
                   Sunday
                   <br />
-                  <span class="emoji">🌧</span>
+                  <span class="day-icon">🌧</span>
                   <br />
                   +2°
                 </div>
@@ -97,7 +97,7 @@
                 <div class="card-day">
                   Monday
                   <br />
-                  <span class="emoji">🌤</span>
+                  <span class="day-icon">🌤</span>
                   <br />
                   +1°
                 </div>
@@ -108,7 +108,7 @@
                 <div class="card-day">
                   Tuesday
                   <br />
-                  <span class="emoji">🌤</span>
+                  <span class="day-icon">🌤</span>
                   <br />
                   +9°
                 </div>
@@ -119,7 +119,7 @@
                 <div class="card-day">
                   Wednesday
                   <br />
-                  <span class="emoji">⛅</span>
+                  <span class="day-icon">⛅</span>
                   <br />
                   +1°
                 </div>
