Created functions for active current every day weather forecast based on SheCodes weather API

--- a/index.html
+++ b/index.html
@@ -58,74 +58,7 @@
               <li class="wind" id="windSpeed">Wind:</li>
             </ul>
           </div>
-          <div class="row text-center">
-            <div class="col">
-              <div class="card">
-                <div class="card-friday">
-                  Friday
-                  <br />
-                  <span class="day-icon">🌦</span>
-                  <br />
-                  +3°
-                </div>
-              </div>
-            </div>
-            <div class="col">
-              <div class="card">
-                <div class="card-day">
-                  Saturday
-                  <br />
-                  <span class="day-icon">🌦</span>
-                  <br />
-                  +6°
-                </div>
-              </div>
-            </div>
-            <div class="col">
-              <div class="card">
-                <div class="card-day">
-                  Sunday
-                  <br />
-                  <span class="day-icon">🌧</span>
-                  <br />
-                  +2°
-                </div>
-              </div>
-            </div>
-            <div class="col">
-              <div class="card">
-                <div class="card-day">
-                  Monday
-                  <br />
-                  <span class="day-icon">🌤</span>
-                  <br />
-                  +1°
-                </div>
-              </div>
-            </div>
-            <div class="col">
-              <div class="card">
-                <div class="card-day">
-                  Tuesday
-                  <br />
-                  <span class="day-icon">🌤</span>
-                  <br />
-                  +9°
-                </div>
-              </div>
-            </div>
-            <div class="col">
-              <div class="card">
-                <div class="card-day">
-                  Wednesday
-                  <br />
-                  <span class="day-icon">⛅</span>
-                  <br />
-                  +1°
-                </div>
-              </div>
-            </div>
-          </div>
+          <div class="row text-center" id="forecast"></div>
         </div>
       </div>
     </div>
