Fixed wind speed

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <br />
         <ul>
           <li class="dayTime" id="date">10 March</li>
-          <li class="dayTime" id="day">Friday, 10 March</li>
+          <li class="dayTime" id="day">Friday</li>
           <li class="dayTime" id="time">18:35</li>
         </ul>
         <div class="row">
@@ -54,8 +54,8 @@
           <div class="col-6">
             <ul>
               <li class="wind" id="description"></li>
-              <li class="wind" id="humidity">Humidity:</li>
-              <li class="wind" id="windSpeed">Wind:</li>
+              <li class="wind" id="humidity"></li>
+              <li class="wind" id="windSpeed"></li>
             </ul>
           </div>
           <div class="row text-center" id="forecast"></div>
